# tools-in-Rust

./: README.md
deet/: Cargo.toml  README.md
deet/examples/: a.out  helloworld.c
deet/src/: debugger.rs  debugger_command.rs  disassembler.rs  inferior.rs  main.rs
inspect-fd/: Cargo.toml
inspect-fd/src/: main.rs_  open_file.rs  process.rs  ps_utils.rs
rdiff/: Cargo.toml  README.md
rdiff/src/: grid.rs  main.rs
rust-wc/: README.md
rust-wc/src/: helper.rs  main.rs
webservice/: Cargo.toml  README.md
webservice/src/: db.rs  main.rs
webservice/src/routes/: file_serve.rs  mod.rs
webservice/static/: test.txt
